--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "node-fetch": "^2.7.0",
     "parse-domain": "^8.2.2",
     "require-all": "^3.0.0",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vercel": "^41.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
